--- a/source/index.html
+++ b/source/index.html
@@ -64,8 +64,8 @@
            <div class="main__sort">
               <p class="sort__title">Сортировать по:</p>
               <div class="button-group">
-                <button class="sort__room"><a href="#">По цене</a></button>
-                <button class="sort__price"><a href="#">По комнатам</a></button>
+                <button class="sort__price"><a href="#">По цене</a></button>
+                <button class="sort__room"><a href="#">По комнатам</a></button>
               </div>
            </div>
 
